--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,6 +6,7 @@
 p{
     font-size: 18px;
 }
+
 body{
     background-color: #fafafa;
   
@@ -45,7 +46,7 @@ body{
        list-style: none;
 }
 .publicidade-lado p{
-    color: #212121;
+    color: #4d4d4d;
 }
 
 h1, h2, h3, h4,h5 {
@@ -82,7 +83,7 @@ h5{
 
 .navbar-brand{
     padding: 3px;
-    
+    padding-right: 10px;
 }
 
 .navbar-default {
